# psi-dec

./: AGENTS.md  Cargo.toml  LICENSE  NOTICE  README.md  rustfmt.toml
crates/inference-backend-metal/: Cargo.toml  README.md  build.rs
crates/inference-backend-metal/benches/: norm.rs  sampling_rejection.rs  support.rs
crates/inference-backend-metal/benches/gdn/: attn.rs  state_io.rs
crates/inference-backend-metal/benches/gqa/: attn.rs
crates/inference-backend-metal/benches/head/: embedding.rs  unembedding.rs
crates/inference-backend-metal/benches/mlp/: dense.rs  moe.rs  sparse.rs
crates/inference-backend-metal/src/: lib.rs  runtime.rs
crates/inference-backend-metal/src/components/: bf16_concat_rows.rs  buffer_cast.rs  buffer_copy.rs  gdn_attention.rs  gdn_projection.rs  gdn_state_pages.rs  gqa_attention.rs  gqa_kv_pages.rs  gqa_local_attention.rs  gqa_norm_rope.rs  gqa_projection.rs  gqa_tiled_attention.rs  mod.rs  moe_combine.rs  moe_expert_major.rs  moe_routing.rs  quantized_dense_mlp.rs  quantized_embedding.rs  quantized_sparse_mlp.rs  replay.rs  residual.rs  residual_rms_norm.rs  rms_norm.rs  row_gather.rs  rowwise_add.rs  sampling.rs  silu.rs
crates/inference-backend-metal/src/components/metal/: bf16_concat_rows.metal  buffer_cast.metal  buffer_copy.metal  gdn_core.metal  gdn_projection_split.metal  gdn_state_page_read.metal  gdn_state_page_write.metal  gqa_activation_gate.metal  gqa_kv_pages.metal  gqa_local_sdpa.metal  gqa_norm_rope.metal  gqa_paged_sdpa_map.metal  gqa_paged_sdpa_reduce.metal  gqa_projection_split.metal  gqa_tiled_attention.metal  moe_combine.metal  moe_expert_major.metal  moe_routing.metal  quantized_dense_mlp_activation.metal  quantized_embedding.metal  residual.metal  residual_rms_norm.metal  rms_norm.metal  row_gather.metal  rowwise_add.metal  sampling.metal  silu.metal
crates/inference-backend-metal/src/metal/: buffer.rs  device.rs  dtype.rs  kernel.rs  mod.rs
crates/inference-backend-metal/src/metal/stream/: dependency.rs  mod.rs  operation.rs  parameter.rs  replay.rs  residency.rs  submission.rs
crates/inference-backend-metal/src/operators/: affine_quantized.rs  elementwise.rs  mlx_headers.rs  mod.rs  softmax.rs
crates/inference-backend-metal/tests/: metal_smoke.rs
crates/inference-executor-core/: Cargo.toml
crates/inference-executor-core/src/: lib.rs  reference.rs
crates/inference-executor-core/src/attn/: mod.rs
crates/inference-executor-core/src/attn/gdn/: core.rs  mod.rs  reference.rs  state.rs
crates/inference-executor-core/src/attn/gqa/: core.rs  mod.rs  reference.rs
crates/inference-executor-core/src/backend/: mod.rs  recorder.rs  runtime.rs  submission.rs
crates/inference-executor-core/src/checkpoint/: index.rs  mapped_file.rs  mod.rs  store.rs  tensor.rs
crates/inference-executor-core/src/def/: dense_linear_shape.rs  error.rs  layer.rs  mod.rs  sparse_linear_shape.rs
crates/inference-executor-core/src/mlp/: mod.rs
crates/inference-executor-core/src/mlp/dense/: core.rs  mod.rs  reference.rs
crates/inference-executor-core/src/mlp/moe/: core.rs  mod.rs  policy.rs  reference.rs
crates/inference-executor-core/src/sampling/: config.rs  domain.rs  mod.rs  reference.rs  rejection_sampling.rs  request_state.rs  top_k_sampling.rs
crates/inference-executor-metal/: Cargo.toml
crates/inference-executor-metal/benches/qwen35/: dense_mlp.rs  embed.rs  executor.rs  gdn.rs  gqa.rs  layers.rs  moe.rs  output.rs  sampling.rs
crates/inference-executor-metal/benches/qwen35/gdn/: fixture.rs
crates/inference-executor-metal/benches/qwen35/gqa/: fixture.rs  weights.rs
crates/inference-executor-metal/src/: lib.rs  replay.rs  trace.rs
crates/inference-executor-metal/src/attn/: mod.rs
crates/inference-executor-metal/src/attn/gdn/: backend.rs  batch_metadata.rs  mod.rs  request_state_table.rs  scratch.rs  state_table.rs
crates/inference-executor-metal/src/attn/gqa/: backend.rs  batch_metadata.rs  mod.rs  request_page_table.rs  scratch.rs
crates/inference-executor-metal/src/def/: layer.rs  mod.rs  replay_op.rs
crates/inference-executor-metal/src/mlp/: mod.rs
crates/inference-executor-metal/src/mlp/dense/: backend.rs  mod.rs  scratch.rs
crates/inference-executor-metal/src/mlp/moe/: backend.rs  scratch.rs
crates/inference-executor-metal/src/model/: embed_unembed.rs  gather.rs  mod.rs  page_arena.rs  residual.rs  rms_norm.rs
crates/inference-executor-metal/src/model/qwen/: mod.rs
crates/inference-executor-metal/src/sampling/: mod.rs  rejection_sampling.rs  spec_probs.rs  top_k_replay.rs  top_k_sampling.rs
crates/inference-executor-metal/tests/: gqa_token_tiled.rs
crates/inference-runtime-core/: Cargo.toml
crates/inference-runtime-core/src/: config.rs  error.rs  lib.rs
crates/inference-runtime-core/src/channel/: dedup_notifier.rs  mod.rs  shutdown.rs  signal.rs
crates/inference-runtime-core/src/compute/: batch_executor.rs  mod.rs
crates/inference-runtime-core/src/compute/request/: mod.rs
crates/inference-runtime-core/src/compute/response/: mod.rs
crates/inference-runtime-core/src/memory/: device_kv_block.rs  mod.rs  offset_allocator.rs  shared_mem.rs  u32_id_allocator.rs
crates/inference-runtime-core/src/runtime/: mod.rs  token.rs
crates/inference-runtime-core/src/runtime/decoder/: mod.rs  resource.rs
crates/inference-runtime-core/src/runtime/pin_cache/: cache.rs  cache_test.rs  entry.rs  guard.rs  list.rs  mod.rs  shard.rs
crates/inference-runtime-core/src/runtime/request/: mod.rs  request_slot.rs  status.rs  token_prob.rs
crates/inference-runtime-core/src/tokenizer/: huggingface.rs  mod.rs
crates/inference-runtime-proto/: Cargo.toml  build.rs
crates/inference-runtime-proto/proto/: inference_runtime.proto
crates/inference-runtime-proto/src/: lib.rs
crates/inference-runtime-service/: Cargo.toml
crates/inference-runtime-service/src/: consts.rs  lib.rs  observability.rs  perf_metrics.rs  profiling.rs  runtime.rs
crates/inference-runtime-service/src/executor/: mod.rs  replay_executor_loop.rs
crates/inference-runtime-service/src/service/: decode.rs  mod.rs
(+129 files in other folders)
